--- a/styles/utils.css
+++ b/styles/utils.css
@@ -3,16 +3,28 @@
   margin-inline: auto;
   padding-inline: 0.5rem;
 }
+.theme-btn {
+  background-color: #72ea62;
+  color: white;
+  padding: 0.3rem 1.5rem;
+  font-family: "Nunito Sans", sans-serif;
+  font-weight: 800;
+  border-radius: 1.5rem;
+  font-size: 1.2rem;
+  border: none;
+  text-transform: capitalize;
+  max-height: 3rem;
+}
 
 /* Extra small devices (phones, 600px and down) */
-@media only screen and (min-width: 600px) {
+@media only screen and (max-width: 600px) {
   .container {
     max-width: 600px;
   }
 }
 
 /* Small devices (portrait tablets and large phones, 600px and up) */
-@media only screen and (min-width: 640px) {
+@media only screen and (max-width: 640px) {
   .container {
     max-width: 640px;
   }
@@ -26,20 +38,20 @@
 }
 
 /* Large devices (laptops/desktops, 992px and up) */
-@media only screen and (min-width: 992px) {
+@media only screen and (max-width: 992px) {
   .container {
     max-width: 992px;
   }
 }
 
 /* Extra large devices (large laptops and desktops, 1200px and up) */
-@media only screen and (min-width: 1200px) {
+@media only screen and (max-width: 1200px) {
   .container {
     max-width: 1200px;
   }
 }
 
-@media only screen and (min-width: 1500px) {
+@media only screen and (max-width: 1500px) {
   .container {
     max-width: 1500px;
   }
